@@ -5,6 +5,7 @@ requires 'strictures' => '2.000001';
 requires 'Curio::Role' => '0.04';
 requires 'DBIx::Connector' => '0.53';
 requires 'Moo::Role' => '2.003000';
+requires 'Types::Common::String' => '1.002001';
 requires 'Types::Standard' => '1.002001';
 
 on test => sub {
